<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_bg"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.Splash">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="@dimen/width_120dp"
            android:layout_height="@dimen/width_120dp"
           android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_stock_champ">

        </ImageView>


        <com.stockchamps.customview.CustomTextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/welcome_to_stock_champs"
            android:layout_marginTop="@dimen/width_20dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16dp"
            font:typeface="@string/text_uniformbold">
        </com.stockchamps.customview.CustomTextView>


        <LinearLayout
            android:layout_width="@dimen/width_150dp"
            android:layout_height="@dimen/width_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:alpha="0.7"
            android:background="@drawable/bg_splash_border">

            <com.stockchamps.customview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/get_started"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16dp"
                font:typeface="@string/source_pro_regular">

            </com.stockchamps.customview.CustomTextView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>