<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="@drawable/ic_login_bg"
    xmlns:font="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.stockchamps.customview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/the_stock_champs"
                android:layout_marginTop="@dimen/width_30dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_22dp"
                font:typeface="@string/text_uniformbold">

            </com.stockchamps.customview.CustomTextView>

            <ImageView
                android:layout_width="@dimen/height_100dp"
                android:layout_height="@dimen/width_120dp"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/width_20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_stock_champ">
            </ImageView>


            <com.stockchamps.customview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16dp"
                android:alpha="0.7"
                font:typeface="@string/pro_text_regular">

            </com.stockchamps.customview.CustomTextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/width_20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/width_20dp">

                    <ImageView
                        android:id="@+id/email"
                        android:layout_width="@dimen/width_30dp"
                        android:layout_height="@dimen/width_30dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_email">
                    </ImageView>

                    <com.stockchamps.customview.EditTextCustom
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_40dp"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:hint="@string/username"
                        android:textSize="@dimen/textsize_16dp"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:textColorHint="@android:color/white"
                        android:layout_toRightOf="@+id/email"
                        ></com.stockchamps.customview.EditTextCustom>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:background="@android:color/white"
                        android:layout_below="@+id/email">

                    </View>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/width_20dp">

                    <ImageView
                        android:id="@+id/password"
                        android:layout_width="@dimen/width_30dp"
                        android:layout_height="@dimen/width_30dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_password">
                    </ImageView>

                    <com.stockchamps.customview.EditTextCustom
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_40dp"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textsize_16dp"
                        android:inputType="textPassword"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:textColorHint="@android:color/white"
                        android:layout_toRightOf="@+id/password"
                        ></com.stockchamps.customview.EditTextCustom>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:background="@android:color/white"
                        android:layout_below="@+id/password">

                    </View>
                </RelativeLayout>


                <com.stockchamps.customview.CustomTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/color_pink"
                    android:text="@string/login"
                    android:textSize="@dimen/textsize_18dp"
                    android:layout_marginTop="@dimen/width_30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    font:typeface="@string/source_pro_bold"
                    android:background="@drawable/bg_edittext"></com.stockchamps.customview.CustomTextView>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/width_20dp"
                    android:orientation="horizontal">


                    <com.stockchamps.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/don_t_have_not_account"
                        android:textColor="@android:color/white"
                        android:alpha="0.7"
                        android:textSize="@dimen/textsize_16dp"
                        android:layout_marginRight="@dimen/margin_10dp"
                        font:typeface="@string/pro_text_regular">

                    </com.stockchamps.customview.CustomTextView>

                    <com.stockchamps.customview.CustomTextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_6dp"
                        android:text="@string/register"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_16dp"
                        font:typeface="@string/source_pro_bold">

                    </com.stockchamps.customview.CustomTextView>

                </LinearLayout>
<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                        android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="horizontal">


                    <com.stockchamps.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:text="@string/forgot_password_link"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_16dp"
                        android:alpha="0.7"
                        android:layout_marginRight="@dimen/margin_10dp"
                        font:typeface="@string/pro_text_regular">

                    </com.stockchamps.customview.CustomTextView>

                    <com.stockchamps.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:text="Register"
                        android:visibility="invisible"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_18dp"
                        font:typeface="@string/source_pro_bold">

                    </com.stockchamps.customview.CustomTextView>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>