<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StockActivity"
    android:background="@color/darkblue"
    android:orientation="vertical"
    xmlns:font="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool"
        android:layout_marginTop="@dimen/margin_20dp"
        android:visibility="visible"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_70dp"
            android:src="@drawable/bg_blue"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"></ImageView>


        <com.stockchamps.customview.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/content1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16dp"
            font:typeface="@string/text_uniformbold"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_70dp"
        android:background="@color/search_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40dp"
            android:layout_margin="@dimen/margin_10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_edittext"
            android:backgroundTint="@color/app_statusbarcolor"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/search"
                android:layout_width="@dimen/textsize_18dp"
                android:layout_height="@dimen/textsize_18dp"
                android:src="@drawable/ic_search"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_10dp">

            </ImageView>

            <com.stockchamps.customview.EditTextCustom
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_toRightOf="@+id/search"
                android:hint="SEARCH"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:textColorHint="@color/darkGray"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:textSize="@dimen/text_size14"
                font:typeface="@string/text_uniformlight"
                android:maxLines="1">

            </com.stockchamps.customview.EditTextCustom>
        </RelativeLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>